--- a/part2/render_forms/src/index.css
+++ b/part2/render_forms/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h3 {
+  color: green;
+  font-style: italic;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2 {
+  color: green;
+  font-style: italic;
+}
+
+.note {
+  color: grey;
+  padding-top: 10px;
+  font-size: 15px;
+}
+
+.phone {
+  color: red;
+  padding-top: 10px;
+  font-size: 12px;
+}
+
+.error {
+  color: red;
+  background: lightblue;
+  font-size: 20px;
+  border-style: inset;
+  border-radius: 30px;
+  padding: 20px 20px 20px 20px;
+  margin-bottom: 20px;
 }
